@@ -1,3 +1,6 @@
-EXTRA_DIST = ai.xml 
+EXTRA_DIST = ai.xml glchess.svg  
 aidir = $(datadir)/glchess/
 ai_DATA = ai.xml
+
+icondir = $(datadir)/pixmaps
+icon_DATA = glchess.svg
