@@ -1,6 +1,4 @@
-EXTRA_DIST = glchess.svg board.png piece.png
-icondir = $(datadir)/pixmaps
-icon_DATA = glchess.svg
+EXTRA_DIST = board.png piece.png
 
 pixmapdir = $(datadir)/pixmaps/glchess/
 pixmap_DATA = board.png piece.png
