@@ -3,6 +3,13 @@ CHANGELOG
 ------------------------------------------------------------------------------
 2006-10-30  Andreas Røsdal  <andrearo@pvv.ntnu.no>
 
+	* textures/glchess.svg:
+	* textures/Makefile.am:
+	* data/glchess.svg:
+	* data/Makefile.am: Move glchess.svg from textures to data directory.
+
+2006-10-30  Andreas Røsdal  <andrearo@pvv.ntnu.no>
+
 	* setup.py: Remove setup.py, which has been replaced by makefiles.
 
 2006-10-23 vers. 1.0 RC1
